2.1.19 

	Bug in cfservd stat-mode on symbolic links not correctly evaluated.
	Bug in linktype=copy for copy fixed.
	
	Bug in array expansion fixed - would truncate string after expansion

	Constant-cosmetics and length alterations. CF_SMALLBUF introduced,
	and MAXHOSTNAMELEN used

	PID file added for each daemin in WORKDIR == /var/cfengine
	
	Patch for function argument parsing
	
	Typo in docs. SelectPartitionGroup -> SelectPartitionNeighbours
	
	Inform=true support for packages
	
	HostRange bug - recoding not implemented properly from
	2.1.16. Caused seg fault.

	Joe Buehler's harmless patch to cfexecd to flag daemon and batch mode.
	
	Serious bug in binserver handling fixed. (Rarely used feature)
	
	home tidying did not set the "done flag" for multiple pass avoidance.
	
	Patches to setting unqualified and qualified names
	
	SuSE 10 detection patch

	Minor error fixes discovered by Joe Buehler and his wonderful software.
	
        Files is the "suspicious" list were marked "not sensible" so that
	follow-up rules e.g. to delete them would not be triggered This is
	now considered a confusion of roles. Suspicious files are no longer skipped.

	More memory leaks in cfservd

	Compilation fix for non-IPv6 savvy machines
	
2.1.18
	
	
	Error in FileExists() left over from 2.1.16 changes. Fixed

	elsedefine was not defined if a copy was requested of a non-existent file. Fixed.
	
	HostnameKeys (dynamic keys for dhcp clients) fix for cfservd.
	
	Error in stat'ing links that point to non-existent files in
	cfservd. Missing "else" caused this to be reported as an error in
	remote file copy.

	5 second timeout reduced to 10 in cfservd file change check.
	
	Error message returned by cfservd is non-specific and previously
	said authentication denied, regardless of failure. The daemon now replies
	"Unspecified refusal". Users should use -v or -d2 on both sides of a connection
	to diagnose the true cause of failure,
	