@@ -125,7 +125,7 @@ time_t NOW;
 DBT key,value;
 DB *DBP;
 static struct Averages ENTRY,MAX,MIN,DET;
-char TIMEKEY[64],FLNAME[CF_BUFSIZE],*sp;
+char TIMEKEY[CF_SMALLBUF],FLNAME[CF_BUFSIZE],*sp;
 double AGE;
 FILE *FPAV=NULL,*FPVAR=NULL,*FPROOT=NULL,*FPUSER=NULL,*FPOTHER=NULL;
 FILE *FPDISK=NULL,*FPLOAD=NULL,*FPIN[ATTR],*FPOUT[ATTR],*FPPH[PH_LIMIT],*fp;
